test/fails/bad_parsing/extern_out_of_order1.lgl
void main() {
    return;
}

declare int f();